ch07/grpc-kubernetes/ingress/grpc-productinfo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc-productinfo-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
    - host: productinfo-server
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: productinfo-server
                port:
                  number: 443
  tls:
    - secretName: productinfo-server-tls-secret
      hosts:
        - productinfo-server
